# scaladecore

./: .gitignore  Makefile  README.md  consumer.ini  pytest.ini  requirements.txt  setup.cfg
scaladecore/: __init__.py  cli.py  clients.py  config.py  entities.py  exceptions.py  managers.py  utils.py  variables.py
scaladecore/fixture/: function.py  requirements.txt
scaladecore/fixture/config/: function.yml
scaladecore/rpc/: client_stub.py
tests/: conftest.py
tests/integration/: tests.py
tests/unit/: tests.py
