[metadata]
name = scaladecore
version = 1.0
license = MIT
author = Guillem López Garcia
author_email = wyl.loga@gmail.com
description = Scalade function creation core package
long_description = file:README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/guiloga12/scaladecore/src/master/
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = False
python_requires = >=3.8
install_requires =
    click==7.1.2
    PyYAML==5.3.1

[options.packages.find]
include = scaladecore*
exclude = tests

[options.package_data]
scaladecore =
    fixture/requirements.txt
    fixture/config/*

[options.extras_require]
dev =

[options.entry_points]
console_scripts =
    scalade = scaladecore.cli:main
